# PyHero

./: .gitignore  README.md  pyproject.toml
pyhero/: constants.py
pyhero/common/: audio.py
tests/: test_parser.py
