[tool.poetry]
name = "pyhero"
version = "0.1.0"
description = ""
authors = ["Jason Villanueva <a@jsonvillanueva.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyaudio = "0.2.11" # You'll have to download this from source on Python 3.7+
pydub = "*"
kivy = "^2"
numpy = "*"
pygame = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
