[tool.poetry]
name = "pyhero"
version = "0.1.0"
description = ""
authors = ["Jason Villanueva <a@jsonvillanueva.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8"
pyglet = "^1.5"
twisted = "^21.2"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest = "^6.0"
pylint = "*"
pre-commit = "^2.11.1"
flake8 = "^3.9.0"
isort = "^5.8.0"

[tool.poetry.dev-dependencies.black]
version = "^20.8b1"
allow-prereleases = false
python = "^3.7"

[tool.pytest.ini_options]
markers = "slow: Mark the test as slow. Can be skipped with --skip_slow"
addopts = "--cov=manim --cov-report xml --cov-report term"

[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"pyhero" = "pyhero.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
